# dorgy

./: .pre-commit-config.yaml  AGENTS.md  ARCH.md  README.md  SPEC.md  main.py  pyproject.toml  tasks.py
.github/workflows/: ci.yml  docs-pages.yml
docs/: architecture.md
docs/development/: extending-pipeline.md
notes/: IMPL.md  PHASE7_SEARCH_STATUS.md  STATUS.md  chromadb_search_plan.md
src/dorgy/: AGENTS.md  __init__.py  cli.py  cli_options.py  cli_support.py
src/dorgy/classification/: AGENTS.md  __init__.py  cache.py  engine.py  models.py  structure.py  vision.py
src/dorgy/cli/commands/: mv.py  org.py  search.py  status.py  undo.py  watch.py
src/dorgy/cli/helpers/: state.py
src/dorgy/config/: AGENTS.md  __init__.py  exceptions.py  models.py  resolver.py
src/dorgy/ingestion/: AGENTS.md  detectors.py  discovery.py  extractors.py  models.py  pipeline.py
src/dorgy/organization/: AGENTS.md  executor.py  models.py  planner.py
src/dorgy/search/: AGENTS.md  __init__.py  index.py  lifecycle.py  text.py
src/dorgy/state/: AGENTS.md  __init__.py  errors.py  models.py
src/dorgy/watch/: AGENTS.md  service.py
tests/: __init__.py  test_classification_engine.py  test_cli.py  test_cli_mv.py  test_cli_org.py  test_cli_search.py  test_cli_watch.py  test_config_cli.py  test_config_manager.py  test_ingestion_pipeline.py  test_ingestion_scaffolding.py  test_organization_scaffolding.py  test_scaffolding.py  test_search_index.py  test_state_repository.py  test_structure_planner.py
