[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dorgy"
version = "0.1.0"
description = "AI-assisted CLI for organizing files."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "tqdm>=4.0.0",
    "docling>=1.0.0",
    "watchdog>=3.0.0",
    "Pillow>=10.0.0",
    "dspy>=2.0.0",
    "chromadb>=0.5.0",
    "pyyaml>=6.0",
    "python-magic>=0.4.27",
    "xxhash>=3.4.1",
    "pydantic>=2.5",
    "pillow-heif>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pre-commit>=3.7.0",
    "ruff>=0.6.0",
    "mypy>=1.9.0",
    "types-PyYAML>=6.0.12.20240917",
]

[project.scripts]
dorgy = "dorgy.cli:main"

[tool.uv]
managed = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
